Disable vim modelines by default
Security problems aside, broken modelines are annoying and, of the few files I
edit that contain modelines, all too common.

--- a/.vim/flags/README
+++ b/.vim/flags/README
@@ -16,6 +16,8 @@ disable-vundle:
   Vundle (Vim plug-in manager) is enabled by default.  Assert this flag to
   disable Vundle and *all* Vundle plugins.
 
+enable-modelines
+
 enable-syntastic
 
 enable-vimclojure
