vim: Guard language-specific plugins with individual flags

--- a/.vim/flags/README
+++ b/.vim/flags/README
@@ -20,6 +20,10 @@ enable-modelines
 
 enable-syntastic
 
-enable-vimclojure
-
 enable-youcompleteme
+
+enable-lang-clojure
+
+enable-lang-coffeescript
+
+enable-lang-markdown
