--- a/.vim/flags/README
+++ b/.vim/flags/README
@@ -16,6 +16,10 @@ disable-vundle:
   Vundle (Vim plug-in manager) is enabled by default.  Assert this flag to
   disable Vundle and *all* Vundle plugins.
 
+enable-color-base16
+
+enable-color-solarized
+
 enable-modelines
 
 enable-syntastic
