zsh: allow HISTFILE to be overridden or unset by parent

--- a/.zshrc.d/history
+++ b/.zshrc.d/history
@@ -6,7 +6,11 @@ setopt HIST_REDUCE_BLANKS
 setopt HIST_VERIFY
 unsetopt HIST_IGNORE_DUPS
 
-export HISTFILE=${HOME}/.history
+if __zshrc_is_null HISTFILE; then
+  unset HISTFILE
+elif __zshrc_is_unset HISTFILE; then
+  export HISTFILE=${HOME}/.history
+fi
 export HISTSIZE=1000
 export HISTTIMEFORMAT='%Y-%m-%d %H:%M:%S  '
 export SAVEHIST=1000
