--- a/bin/pyenvthon-3.8
+++ b/bin/pyenvthon-3.8
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/usr/bin/env bash
 
 # This is a pyenvthon trampoline suitable for use in script shebangs -- where
 # program arguments are not universally supported on all Unix-like platforms.
