--- a/.zshrc.d/history
+++ b/.zshrc.d/history
@@ -2,6 +2,9 @@ setopt APPEND_HISTORY
 setopt EXTENDED_HISTORY
 setopt HIST_FCNTL_LOCK
 setopt HIST_FIND_NO_DUPS
+setopt HIST_IGNORE_ALL_DUPS
+setopt HIST_IGNORE_SPACE
+setopt HIST_NO_STORE
 setopt HIST_REDUCE_BLANKS
 setopt HIST_VERIFY
 unsetopt HIST_IGNORE_DUPS
